// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared/UI/Button Contained 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Disabled 1`] = `
<button
  className="css-e5g6yw-Button e1p27jrl0"
  color="primary"
  disabled={true}
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Full Width 1`] = `
<button
  className="css-ptfixf-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Large 1`] = `
<button
  className="css-1ggta01-Button e1p27jrl0"
  color="primary"
  size="large"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Link 1`] = `
<a
  className="css-1ssfnt4-Button e1p27jrl0"
  color="primary"
>
  My Button
</a>
`;

exports[`Storyshots Shared/UI/Button Medium 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
  color="primary"
  size="medium"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button No Shadow 1`] = `
<button
  className="css-1qhu774-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Outlined 1`] = `
<button
  className="css-x8sg5i-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Primary 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Rounded 1`] = `
<button
  className="css-1rape6-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Secondary 1`] = `
<button
  className="css-1cdasaa-Button e1p27jrl0"
  color="secondary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Small 1`] = `
<button
  className="css-dxk2pp-Button e1p27jrl0"
  color="primary"
  size="small"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Text 1`] = `
<button
  className="css-svldu7-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/IconButton Contained 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Disabled 1`] = `
<button
  className="css-e5g6yw-Button e1p27jrl0"
  disabled={true}
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Full Width 1`] = `
<button
  className="css-ptfixf-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Large 1`] = `
<button
  className="css-1ggta01-Button e1p27jrl0"
  size="large"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Link 1`] = `
<a
  className="css-1ssfnt4-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</a>
`;

exports[`Storyshots Shared/UI/IconButton Medium 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton No Shadow 1`] = `
<button
  className="css-1qhu774-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Outlined 1`] = `
<button
  className="css-x8sg5i-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Primary 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Rounded 1`] = `
<button
  className="css-1rape6-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Secondary 1`] = `
<button
  className="css-1cdasaa-Button e1p27jrl0"
  color="secondary"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Small 1`] = `
<button
  className="css-wcz1jq-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Text 1`] = `
<button
  className="css-svldu7-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/Logo Custom 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "342px",
        "width": "342px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Large 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Medium 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Primary 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Small 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "86px",
        "width": "86px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Typography Body 1`] = `
<span
  className="css-1xfeocz-Typography e1eqcpp10"
>
  My Body 1
</span>
`;

exports[`Storyshots Shared/UI/Typography Body 2 1`] = `
<span
  className="css-4dbfqp-Typography e1eqcpp10"
>
  My Body 2
</span>
`;

exports[`Storyshots Shared/UI/Typography Bold 1`] = `
<span
  className="css-ymkt3d-Typography e1eqcpp10"
  fontWeight="bold"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Header 1`] = `
<h2
  className="css-13xwp29-Typography e1eqcpp10"
>
  My Header
</h2>
`;

exports[`Storyshots Shared/UI/Typography Italic 1`] = `
<span
  className="css-c4687g-Typography e1eqcpp10"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Light 1`] = `
<span
  className="css-n3t3bp-Typography e1eqcpp10"
  fontWeight="light"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Noto Serif 1`] = `
<span
  className="css-sicm3t-Typography e1eqcpp10"
  fontFamily="notoSerif"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary 1`] = `
<span
  className="css-1xfeocz-Typography e1eqcpp10"
>
  My Typography
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary Color 1`] = `
<span
  className="css-schob0-Typography e1eqcpp10"
  color="primary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Sans 1`] = `
<span
  className="css-1vlagpw-Typography e1eqcpp10"
  fontFamily="sans"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Secondary Color 1`] = `
<span
  className="css-13tdw6e-Typography e1eqcpp10"
  color="secondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Primary Color 1`] = `
<span
  className="css-1vlagpw-Typography e1eqcpp10"
  color="textPrimary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Secondary Color 1`] = `
<span
  className="css-1au5wh6-Typography e1eqcpp10"
  color="textSecondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Underlined 1`] = `
<span
  className="css-14lvqru-Typography e1eqcpp10"
>
  My Text
</span>
`;
